# Toolbox_IA_Microservice

./: .coverage  README.md  coverage.xml  deploy.sh  exemple_env  init_project.py  pyproject.toml
.github/workflows/: ci.yml
Les_Projets/: Projet_1_bases.md
app_api/: main.py
app_api/models/: __init__.py
app_front/: main.py
docs/source/: api.rst  code_of_conduct.md  conf.py  contributing.md  index.rst  license.md
public/: .buildinfo  .buildinfo.bak  api.html  code_of_conduct.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  sphinx-reading-durations.json  utilisation.html
public/.doctrees/: api.doctree  code_of_conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  utilisation.doctree
public/_modules/: index.html
public/_sources/: code_of_conduct.md.txt  contributing.md.txt  utilisation.rst.txt
tests/: conftest.py  test_mon_module.py
