[project]
name = "toolbox_ia_microservice"
version = "1.0.0"
description = "Architecture Microservices IA conteneurisée avec FastAPI, Streamlit et PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "streamlit",
    "requests",
    "pydantic-settings",
    "loguru"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.4",
    "genbadge[all]>=1.1.0",
    "sphinx",
    "furo",
    "myst-parser"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E, F : Erreurs PEP8 et logiques
# I : Tri des imports (isort)
# D : Vérification des docstrings
select = ["E", "F", "I", "D"]
ignore = [
    "D100", # Missing docstring in public module (souvent redondant)
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Génère automatiquement le rapport de couverture pour l'API
addopts = "-v --cov=app_api --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app_api"]
omit = ["tests/*", "**/__init__.py"]